k8s-kustomize/frontend/base/frontend-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-active-svc
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-preview-svc
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
