k8s-kustomize/frontend/base/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-active-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # MATCHED TO ARGOCD FOR COST SAVINGS
    alb.ingress.kubernetes.io/group.name: shared-ingress-group
    external-dns.alpha.kubernetes.io/hostname: app.trialphase.shop
spec:
  ingressClassName: alb
  rules:
    - host: app.trialphase.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-active-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-preview-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # MATCHED TO ARGOCD FOR COST SAVINGS
    alb.ingress.kubernetes.io/group.name: shared-ingress-group
    external-dns.alpha.kubernetes.io/hostname: appdev.trialphase.shop
spec:
  ingressClassName: alb
  rules:
    - host: appdev.trialphase.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-preview-svc
                port:
                  number: 80
